syntax = "proto3";

package hvxahv.v1.proto;
option go_package = ".;pb";

// Accounts Services ...
service Inbox {
  rpc NewInbox (InboxData) returns (NewInboxReply) {}
  rpc GetInbox (Name) returns (InboxData) {}
}

message InboxData {
  string Name      = 1;
  string RequestId = 2;
  string EventType = 3;
  string Actor     = 4;
}

message NewInboxReply {
  string reply = 1;
}

message Name {
  string name = 1;
}
